@@ -146,7 +146,7 @@
     X(MULTICAL403,MANUFACTURER_KAM, 0x0d,  0x34) \
     X(MULTICAL603,MANUFACTURER_KAM, 0x04,  0x35) \
     X(MULTICAL803,MANUFACTURER_KAM, 0x04,  0x39) \
-    X(OMNIPOWER,  MANUFACTURER_KAM, 0x02,  0x01) \
+    X(OMNIPOWER,  MANUFACTURER_KAM, 0x02,  0x30) \
     X(RFMAMB,     MANUFACTURER_BMT, 0x1b,  0x10) \
     X(RFMTX1,     MANUFACTURER_BMT, 0x07,  0x05) \
     X(Q400,       MANUFACTURER_AXI, 0x07,  0x10) \
