@@ -1,0 +1,4 @@
+name=myomnipower
+type=omnipower
+id=32666857
+key=
