@@ -20,6 +20,7 @@ $PROG --format=json simulations/simulation_c1.txt \
       My403Cooling multical403 78780102 "" \
       Heat multical603 36363636 "" \
       Heater multical803 80808081 "" \
+      myomnipower omnipower 32666857 "" \
       > $TEST/test_output.txt 2> $TEST/test_stderr.txt
 
 if [ "$?" = "0" ]
