@@ -1,3 +1,6 @@
+
+Janus Bo Andersen fixed the omnipower driver! Thanks Janus!
+
 Version 1.0.4: 2020-12-05
 
 Nikodem added support for Multical803! Thanks Nikodem!
